syntax = "proto3";
package api.v1;

import "google/protobuf/empty.proto";

service StatusService {
  rpc GetStatus(google.protobuf.Empty) returns (GetStatusResponse);
}

message GetStatusResponse {
  string status = 1;
  AuthInfo auth_info = 2;
}

message AuthInfo {
  bool authenticated = 1;
}
